--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@emotion/styled": "^11.10.6",
     "@fontsource/open-sans": "^4.5.14",
     "@fontsource/raleway": "^4.5.12",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "framer-motion": "^10.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,6 +29,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
+    "react-router-dom": "^6.10.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
