--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
+    "@types/node": "^20.1.4",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
